# CX-AE-Plugins

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  deploy.bat  deploy.ps1
docs/: CMAKE.md  CPP20.md
plugins/cx_ColorLines/: ColorLines.cpp  ColorLines.h  ColorLinesPiPL.r  README.md
plugins/cx_PencilLine/: PencilLine.cpp  PencilLine.h  PencilLinePiPL.r
shared/: CXCommon.h
win/: CX-AE-Plugins.sln
win/cx_ColorLines/: cx_ColorLines.vcxproj
win/cx_PencilLine/: cx_PencilLine.vcxproj
